--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://Glowin.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Glow Blog
+subtitle: This is glow blog.
+author: Glowin
 simple_search: http://google.com/search
 description:
 
