--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://Glowin.github.com
+url: http://glowface.net
 title: Glow Blog
 subtitle: This is glow blog.
 author: Glowin
