--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: glowin
+disqus_short_name: glowface
 disqus_show_comment_count: false
 
 # Google Analytics
