add google analytics tracking id

--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ disqus_short_name: glowface
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-16498136-3
 
 # Facebook Like
 facebook_like: false
